--- a/menu/templates/dashboard.html
+++ b/menu/templates/dashboard.html
@@ -109,6 +109,11 @@
 							Numero de tasks: {{tasks}}
 	
 						</span>
+						<span class="badge bg-primary py-3">
+	
+							Numero de tasks finalizadas {{is_finished}}
+	
+						</span>
 						<div class="row py-3">
 								<div class="col-sm-6">
 									<div class="card mb-3">
