--- a/menu/templates/dashboard.html
+++ b/menu/templates/dashboard.html
@@ -56,11 +56,11 @@
 								<span class="ms-1 d-none d-sm-inline text-white"><i class="fas fa-chalkboard-teacher fa-lg"></i> Dashboard</span>
 							</a>
 						</li>
-							<a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-decoration-none">
+							<a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
 								<span class="ms-1 d-none d-sm-inline"><i class="fas fa-tasks fa-lg"> </i> Tareas</span></a>
 							<ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
 								<li class="w-100">
-									<a href="{% url 'tasks' %}" class="nav-link px-0"><i class="fas fa-database"></i> <span
+									<a href="{% url 'tasks' %}" class="nav-link px-0 text-decoration-none"><i class="fas fa-database"></i> <span
 											class="d-none d-sm-inline">Mis tareas</span></a>
 								</li>
 								<li>
@@ -89,8 +89,8 @@
 							</ul>
 						</li>
 						<li>
-							<a href="#" class="nav-link px-0 align-middle">
-								<i class="fas fa-users"></i><span class="ms-1 d-none d-sm-inline">Contactos</span> </a>
+							<a href="{% url 'contacts' %}" class="nav-link px-0 align-middle text-decoration-none">
+								<i class="fas fa-users"></i><span class="ms-1 d-none d-sm-inline">Clientes</span> </a>
 						</li>
 						<li>
 							<a href="#" class="nav-link px-0 align-middle">
@@ -103,6 +103,8 @@
 			<div class="col">
 				<div class="container container-sm py-5">
 					{% block content %}
+					
+
 						<h3 class="display-5 text-center mb-3"> Bienvenido {{ request.user }}!</h3>
 						<span class="badge bg-primary py-3">
 	
@@ -166,9 +168,11 @@
 								</div>
 						</div>
 					
-					{% endblock %}
+					
 				</div>
+				{% endblock %}
 			</div>
+			
 		</div>
 	</div>
 	<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
