--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -24,10 +24,8 @@
         </button>
     </div>
 		<div class="justify-content-center py-4">
-			<button type="button" class="btn btn-success btn-sm">
-					<a class="text-decoration-none text-white" href="{% url 'tasks' %}">Refrescar</a> <i class="fas fa-sync-alt"></i>
-			</button>
-	</div>
+			<a class="text-decoration-none text-white btn btn-success btn-sm" href="{% url 'tasks' %}">Refrescar <i class="fas fa-sync-alt"></i></a> 
+		</div>
 
     <div class="modal fade justify-content-center" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-scrollable" role="document">
