--- a/contacts/templates/contacts.html
+++ b/contacts/templates/contacts.html
@@ -1,115 +1,226 @@
 {% extends "dashboard.html" %}
 {% load static %}
-<title>{% block title%} Clientes {% endblock %}</title>
-
+<title>{% block title %}Clientes{% endblock %}</title>
 
 {% block content %}
-<h3 class="text-center lead"> Gestionar clientes y campañas de marketing <i class="fas fa-users"></i></h3>
-
-<div class=" text-end justify-content-end">
-    <button class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal"> Crear un contacto <i class="fas fa-address-book"></i></button>
-</div>
-
-<div class="justify-content-center py-4">
-    <a class="text-decoration-none text-white btn btn-success btn-sm" href="{% url 'contacts' %}">Refrescar <i class="fas fa-sync-alt"></i></a> 
-</div>
-
-<div class="modal fade justify-content-center" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable" role="document">
-        <div class="modal-content">
-            <div class="modal-body">
-                <h3 class="lead">Agregar un nuevo cliente <i class="fas fa-address-book"></i></h3>
-                <form action="{% url 'add' %}" method="POST">
-                    {% csrf_token %}
-                    <div class="form-floating py-3">
-                        <input class="form-control form-control-sm mb-2" name="taskName" type="text" id="taskName">
-                        <label class="form-label" for="taskName">Nombre del cliente </label>
-                    </div>
-                    <div class="form-floating py-3">
-                        <input class="form-control form-control-sm mb-2" name="taskDescription" type="text" id="taskDescription">
-                        <label class="form-label" for="taskDescription">Correo</label>
-                    </div>
-                    <div class="form-floating py-3">
-                        <input class="form-control form-control-sm mb-2" name="taskDescription" type="text" id="taskDescription">
-                        <label class="form-label" for="taskDescription">Numero de telefono</label>
-                    </div>
-                    <div class="form-floating py-3">
-                        <input class="form-control form-control-lg mb-2" name="taskStatus" type="text" id="taskStatus" readonly value="Sin campaña">
-                        <label class="form-label" for="taskStatus">Campaña</label>
-                    </div>
-                    <button type="submit" class="btn btn-outline-primary">Agregar Cliene</button>
-                </form>
+    <h3 class="text-center lead">Gestionar clientes y campañas de marketing <i class="fas fa-users"></i></h3>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-success alert-dismissible fade show mt-3" role="alert" style="width: 350px;">
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                Cliente agregado con éxito!
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancelar</button>
+        {% endfor %}
+    {% endif %}
+
+    <div class="text-end justify-content-end">
+        <button class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#addContact">Crear un contacto <i class="fas fa-address-book"></i></button>
+    </div>
+
+    <div class="justify-content-center py-4">
+        <a class="text-decoration-none text-white btn btn-success btn-sm" href="{% url 'contacts' %}">Refrescar <i class="fas fa-sync-alt"></i></a>
+    </div>
+
+    <div class="modal fade justify-content-center" id="addContact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h3 class="lead">Agregar un nuevo cliente <i class="fas fa-address-book"></i></h3>
+                    <form action="{% url 'add_contact' %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-floating py-3">
+                            <input class="form-control form-control-sm mb-2" name="customer" type="text" id="customer" maxlength="20" required aria-required="Por favor ingrese el nombre del cliente.">
+                            <label class="form-label" for="taskName">Nombre del cliente</label>
+                        </div>
+                        <div class="form-floating py-3">
+                            <input class="form-control form-control-sm mb-2" name="address" type="text" id="address" maxlength="40">
+                            <label class="form-label" for="taskDescription">Dirección</label>
+                        </div>
+                        <div class="form-floating py-3">
+                            <input class="form-control form-control-sm mb-2" name="position" type="text" id="position" maxlength="20">
+                            <label class="form-label" for="taskDescription">Cargo</label>
+                        </div>
+                        <div class="form-floating py-3">
+                            <input class="form-control form-control-lg mb-2" name="interaction" type="text" id="interaction" maxlength="20">
+                            <label class="form-label" for="taskStatus">Interacción</label>
+                        </div>
+                        <div class="form-floating py-3">
+                            <input class="form-control form-control-lg mb-2" name="preference" type="text" id="preference" maxlength="25">
+                            <label class="form-label" for="taskStatus">Preferencia</label>
+                        </div>
+                        <div class="form-floating py-3">
+                            <input class="form-control form-control-lg mb-2" name="notes" type="text" id="notes" maxlength="150">
+                            <label class="form-label" for="taskStatus">Notas</label>
+                        </div>
+                        <div class="form-floating py-3">
+                            <input class="form-control form-control-lg mb-2" name="campaing" type="text" id="campaing" readonly value="Sin campaña">
+                            <label class="form-label" for="taskStatus">Campaña</label>
+                        </div>
+                        <div class="form-floating py-3">
+                            <input class="form-control form-control-lg mb-2" name="email" type="email" id="email">
+                            <label class="form-label" for="taskStatus">Email</label>
+                        </div>
+                        <div class="form-floating py-3">
+                            <input class="form-control form-control-lg mb-2" name="phoneNumber" type="text" id="phoneNumber" maxlength="14">
+                            <label class="form-label" for="taskStatus">Teléfono</label>
+                        </div>
+                        <div class="form-floating py-3">
+                            <select class="form-select" aria-label="Default select example" name="status" id="status">
+																<option selected></option>
+																<option value="Activo">Activo</option>
+                                <option value="Inactivo">Inactivo</option>
+                            </select>
+                            <label for="priority" class="form-label">Estado</label>
+                        </div>
+
+                        <button type="submit" class="btn btn-outline-primary">Agregar Cliente</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancelar</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="table-responsive">
-    <table id="example" class="table table-borderless table-hover py-5">
-        <thead>
-            <tr>
-                <th></th>
-                <th> # </th>
-                <th> Cliente</th>
-                <th> Direccion </th>
-                <th> Cargo </th>
-                <th> Interaccion </th>
-                <th> Preferencia</th>
-                <th> Notas </th>
-                <th> Campaña </th>
-                <th> Email</th>
-                <th> Numero</th>
-                <th> Estado</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><i class="far fa-check-circle"></i></td>
-                <td>1</td>
-                <td>Monda anime</td>
-                <td>Compañía123</td>
-                <td>Plaza Ficticia 789</td>
-                <td>Director de marketing</td>
-                <td>Correo electrónico</td>
-                <td>Correo electrónico</td>
-                <td>Acuerdo de contrato firmado</td>
-                <td>Campaña de cierre de ventas</td>
-                <td>info@compania123.com</td>
-                <td>555-456-7890</td>
-                <td>
-                    <li class="dropdown list-unstyled">
-                    <a class="text-decoration-none" id="Dropdown-menu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-bars justify-content-center"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="Dropdown-menu">
-                        <li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#DoneTask"> <i class="fas fa-mail-bulk"></i> Agregar campaña</a></li>
-                        <li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#TaskUpdate"><i class="far fa-edit"></i> Actualizar</a></li>
-                        <li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#TaskDelete"><i class="fas fa-trash-alt"></i> Eliminar</a></li>
-                    </ul>
-                    </li>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+    <div class="table-responsive">
+        <table id="example" class="table table-bordered" style="width: 100%;">
+            <thead>
+                <tr>
+                    <th>Cliente</th>
+                    <th>Dirección</th>
+                    <th>Cargo</th>
+                    <th>Interacción</th>
+                    <th>Preferencia</th>
+                    <th>Notas</th>
+                    <th>Campaña</th>
+                    <th>Email</th>
+                    <th>Teléfono</th>
+                    <th>Estado</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for customer in customers %}
+                    <tr>
+                        <td>{{ customer.customer }}</td>
+                        <td>{{ customer.address }}</td>
+                        <td>{{ customer.position }}</td>
+                        <td>{{ customer.interaction }}</td>
+                        <td>{{ customer.preference }}</td>
+                        <td>{{ customer.notes }}</td>
+                        <td>{{ customer.campaing }}</td>
+                        <td>{{ customer.email }}</td>
+                        <td>{{ customer.phone_number }}</td>
+                        <td>{{ customer.status }}</td>
+												<div class="modal fade" id="deleteContact{{ customer.id }}" tabindex="-1" role="dialog" aria-labelledby="deleteContact" aria-hidden="true">
+													<div class="modal-dialog">
+															<div class="modal-content">
+																	<div class="modal-header">
+																			<h5 class="modal-title" id="taskDelete">Eliminar cliente <i class="fas fa-id-badge"></i></h5>
+																			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+																	</div>
+																	<div class="modal-body">
+																			<h3 class="lead">¿Seguro que deseas eliminar este cliente: <b>'{{customer.customer}}'</b>? </h3>
+																	</div>
+																	<div class="modal-footer">
+																			<form action="{% url 'delete_contact' customer.id %}" method="POST">
+																					{% csrf_token %}
+																					<button type="submit" class="btn btn-outline-danger" data-bs-target="#deleteContact{{ customer.id }}" data-bs-toggle="modal">Eliminar</button>
+																			</form>        
+																			<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
+																	</div>
+															</div>
+												</div>
+                        <td>
+                            <li class="dropdown list-unstyled">
+                                <a class="text-decoration-none" id="Dropdown-menu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fas fa-bars justify-content-center"></i>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="Dropdown-menu">
+                                    <li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#DoneTask"><i class="fas fa-mail-bulk"></i> Agregar campaña</a></li>
+                                    <li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#updateCustomer{{customer.id}}"><i class="far fa-edit"></i> Actualizar</a></li>
+                                    <li><a class="dropdown-item" href="{% url "delete_contact" customer.id %}" data-bs-toggle="modal" data-bs-target="#deleteContact{{customer.id}}"><i class="fas fa-trash-alt"></i> Eliminar</a></li>
+                                </ul>
+                            </li>
+														<div class="modal fade justify-content-center" id="updateCustomer{{customer.id}}" tabindex="-1" role="dialog" aria-labelledby="updateCustomer" aria-hidden="true">
+															<div class="modal-dialog modal-dialog-scrollable" role="document">
+																	<div class="modal-content">
+																			<div class="modal-body">
+																					<h3 class="lead">Actualizar cliente: <b>'{{ customer.customer }}'</b> <i class="fas fa-address-book"></i></h3>
+																					<form action="{% url 'update_contact' customer.id %}" method="POST">
+																							{% csrf_token %}
+																							<div class="form-floating py-3">
+																									<input class="form-control form-control-sm mb-2" name="customer" type="text" id="customer" maxlength="20" required aria-required="Por favor ingrese el nombre del cliente.">
+																									<label class="form-label" for="taskName">Nombre del cliente</label>
+																							</div>
+																							<div class="form-floating py-3">
+																									<input class="form-control form-control-sm mb-2" name="address" type="text" id="address" maxlength="40">
+																									<label class="form-label" for="taskDescription">Dirección</label>
+																							</div>
+																							<div class="form-floating py-3">
+																									<input class="form-control form-control-sm mb-2" name="position" type="text" id="position" maxlength="20">
+																									<label class="form-label" for="taskDescription">Cargo</label>
+																							</div>
+																							<div class="form-floating py-3">
+																									<input class="form-control form-control-lg mb-2" name="interaction" type="text" id="interaction" maxlength="20">
+																									<label class="form-label" for="taskStatus">Interacción</label>
+																							</div>
+																							<div class="form-floating py-3">
+																									<input class="form-control form-control-lg mb-2" name="preference" type="text" id="preference" maxlength="25">
+																									<label class="form-label" for="taskStatus">Preferencia</label>
+																							</div>
+																							<div class="form-floating py-3">
+																									<input class="form-control form-control-lg mb-2" name="notes" type="text" id="notes" maxlength="150">
+																									<label class="form-label" for="taskStatus">Notas</label>
+																							</div>
+																							<div class="form-floating py-3">
+																									<input class="form-control form-control-lg mb-2" name="campaing" type="text" id="campaing" readonly value="Sin campaña">
+																									<label class="form-label" for="taskStatus">Campaña</label>
+																							</div>
+																							<div class="form-floating py-3">
+																									<input class="form-control form-control-lg mb-2" name="email" type="email" id="email">
+																									<label class="form-label" for="taskStatus">Email</label>
+																							</div>
+																							<div class="form-floating py-3">
+																									<input class="form-control form-control-lg mb-2" name="phoneNumber" type="text" id="phoneNumber" maxlength="14">
+																									<label class="form-label" for="taskStatus">Teléfono</label>
+																							</div>
+																							<div class="form-floating py-3">
+																									<select class="form-select" aria-label="Default select example" name="status" id="status">
+																											<option selected></option>
+																											<option value="Activo">Activo</option>
+																											<option value="Inactivo">Inactivo</option>
+																									</select>
+																									<label for="priority" class="form-label">Estado</label>
+																							</div>
+											
+																							<button type="submit" class="btn btn-outline-primary">Actualizar Cliente</button>
+																					</form>
+																			</div>
+																			<div class="modal-footer">
+																					<button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancelar</button>
+																			</div>
+																	</div>
+															</div>
+													</div>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
-{% block child_js_below_files %} 
-    <script>
-        $('#myModal').on('shown.bs.modal', function () {
-            $('#myInput').trigger('focus')
-        })
-    </script>
-            
-    <script src="{% static 'js/table.js' %}"></script>
-    <script src="{% static 'js/dataTables.js' %}"></script>
-    <script src="{% static 'js/dataTables.bootstrap5.js' %}"></script>
-    <script src="{% static 'js/hide_message.js' %}"></script>
+    {% block child_js_below_files %}
+        <script>
+            $('#myModal').on('shown.bs.modal', function () {
+                $('#myInput').trigger('focus')
+            });
+        </script>
 
-{% endblock %}
-
-
+        <script src="{% static 'js/table.js' %}"></script>
+        <script src="{% static 'js/dataTables.js' %}"></script>
+        <script src="{% static 'js/dataTables.bootstrap5.js' %}"></script>
+        <script src="{% static 'js/hide_message.js' %}"></script>
+    {% endblock %}
 {% endblock %}
