se agrego pills a las filas de los estados de las tareas

--- a/menu/templates/dashboard.html
+++ b/menu/templates/dashboard.html
@@ -56,7 +56,7 @@
 								<span class="ms-1 d-none d-sm-inline text-white"><i class="fas fa-chalkboard-teacher fa-lg"></i> Dashboard</span>
 							</a>
 						</li>
-							<a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+							<a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle text-decoration-none">
 								<span class="ms-1 d-none d-sm-inline"><i class="fas fa-tasks fa-lg"> </i> Tareas</span></a>
 							<ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
 								<li class="w-100">
@@ -116,6 +116,17 @@
 							Numero de tasks finalizadas {{is_finished}}
 	
 						</span>
+						<span class="badge bg-primary py-3">
+	
+							Numero de contactos obtenidos {{customers}}
+	
+						</span>
+						<span class="badge bg-primary py-3">
+	
+							Numero de campañas de marketing alcanzadas {{customers_campaing}}
+	
+						</span>
+						
 						<div class="row py-3">
 								<div class="col-sm-6">
 									<div class="card mb-3">
