--- a/menu/static/styles/menu_navbar.css
+++ b/menu/static/styles/menu_navbar.css
@@ -8,6 +8,16 @@
   color:#fcfcfc;
 }
 
+body, html {
+  margin: 0;
+  padding: 0;
+}
+
+
+.navbar {
+  margin: 0px;
+}
+
 
 .nav-pills .nav-link {
   padding: 20px;
