--- a/contacts/templates/contacts.html
+++ b/contacts/templates/contacts.html
@@ -144,7 +144,7 @@
                                     <i class="fas fa-bars justify-content-center"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="Dropdown-menu">
-                                    <li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#DoneTask"><i class="fas fa-mail-bulk"></i> Agregar campaña</a></li>
+                                    <li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#newCampaing{{customer.id}}"><i class="fas fa-mail-bulk"></i> Agregar campaña</a></li>
                                     <li><a class="dropdown-item" href="" data-bs-toggle="modal" data-bs-target="#updateCustomer{{customer.id}}"><i class="far fa-edit"></i> Actualizar</a></li>
                                     <li><a class="dropdown-item" href="{% url "delete_contact" customer.id %}" data-bs-toggle="modal" data-bs-target="#deleteContact{{customer.id}}"><i class="fas fa-trash-alt"></i> Eliminar</a></li>
                                 </ul>
@@ -209,6 +209,38 @@
 																			</div>
 																	</div>
 															</div>
+													</div>
+													<div class="modal fade" id="newCampaing{{ customer.id }}" tabindex="-1" role="dialog" aria-labelledby="newCampaing aria-hidden="true">
+														<div class="modal-dialog">
+																<div class="modal-content">
+																		<div class="modal-header">
+																				<h5 class="modal-title" id="newCampaing{{ customer.id }}">Crear campaña de marketing <i class="fas fa-mail-bulk"></i></h5>
+																				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+																		</div>
+																		<div class="modal-body">
+																			<form action="{% url 'marketing_campaing' %}" method="POST">
+																				{% csrf_token %}
+																			<div class="form-floating py-3">
+																				<input class="form-control form-control-sm mb-2" name="emailSubject" type="text" id="emailSubject" maxlength="20" required>
+																				<label class="form-label" for="emailSubject">Subject</label>
+																			</div>
+																			<div class="form-floating py-3">
+																				<textarea class="form-control"  name="emailMessage" id="emailMessage" cols="50" rows="50"></textarea>
+																				<label class="form-label" for="emailMessage">Mensaje</label>
+																			</div>
+																			<div class="form-floating py-3">
+																				<input class="form-control form-control-sm mb-2" name="emailUser" type="email" id="emailUser" maxlength="20" readonly value="{{customer.email}}">
+																				<label class="form-label" for="emailUser">Correo</label>
+																			</div>
+																			<button type="submit" class="btn btn-outline-danger" data-bs-target="#newCampaing{{ customer.id }}" data-bs-toggle="modal">Crear</button>
+
+																		</form> 
+																		</div>
+																		<div class="modal-footer">
+																																								       
+																				<button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
+																		</div>
+																</div>
 													</div>
                         </td>
                     </tr>
