--- a/contacts/templates/contacts.html
+++ b/contacts/templates/contacts.html
@@ -218,7 +218,7 @@
 																				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 																		</div>
 																		<div class="modal-body">
-																			<form action="{% url 'marketing_campaing' %}" method="POST">
+																			<form action="{% url 'marketing_campaing' customer.id %}" method="POST">
 																				{% csrf_token %}
 																			<div class="form-floating py-3">
 																				<input class="form-control form-control-sm mb-2" name="emailSubject" type="text" id="emailSubject" maxlength="20" required>
@@ -229,7 +229,7 @@
 																				<label class="form-label" for="emailMessage">Mensaje</label>
 																			</div>
 																			<div class="form-floating py-3">
-																				<input class="form-control form-control-sm mb-2" name="emailUser" type="email" id="emailUser" maxlength="20" readonly value="{{customer.email}}">
+																				<input class="form-control form-control-sm mb-2" name="emailUser" type="email" id="emailUser" maxlength="20" readonly value="leidyjam1@hotmail.com">
 																				<label class="form-label" for="emailUser">Correo</label>
 																			</div>
 																			<button type="submit" class="btn btn-outline-danger" data-bs-target="#newCampaing{{ customer.id }}" data-bs-toggle="modal">Crear</button>
