--- a/contacts/templates/contacts.html
+++ b/contacts/templates/contacts.html
@@ -8,10 +8,11 @@
         {% for message in messages %}
             <div class="alert alert-success alert-dismissible fade show mt-3" role="alert" style="width: 350px;">
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                Cliente agregado con éxito!
+								{{message}}
             </div>
         {% endfor %}
     {% endif %}
+	
 
     <div class="text-end justify-content-end">
         <button class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#addContact">Crear un contacto <i class="fas fa-address-book"></i></button>
@@ -211,29 +212,36 @@
 															</div>
 													</div>
 													<div class="modal fade" id="newCampaing{{ customer.id }}" tabindex="-1" role="dialog" aria-labelledby="newCampaing aria-hidden="true">
-														<div class="modal-dialog">
+														<div class="modal-dialog modal-dialog-scrollable">
 																<div class="modal-content">
 																		<div class="modal-header">
 																				<h5 class="modal-title" id="newCampaing{{ customer.id }}">Crear campaña de marketing <i class="fas fa-mail-bulk"></i></h5>
 																				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 																		</div>
 																		<div class="modal-body">
+																			<img src="{% static 'images/logo_brand.png' %}" alt="logo_brand.png" width="450" height="100">
+																			<h3 class="lead mt-2" style="text-align:justify;">A través de las campañas de marketing llevamos a cabo una comunicación optima con nuestros clientes para promocionar nuestros productos y servicios por medio de los diferentes canales.</h3>
 																			<form action="{% url 'marketing_campaing' customer.id %}" method="POST">
 																				{% csrf_token %}
 																			<div class="form-floating py-3">
 																				<input class="form-control form-control-sm mb-2" name="emailSubject" type="text" id="emailSubject" maxlength="20" required>
-																				<label class="form-label" for="emailSubject">Subject</label>
+																				<label class="form-label" for="emailSubject">Asunto</label>
 																			</div>
 																			<div class="form-floating py-3">
-																				<textarea class="form-control"  name="emailMessage" id="emailMessage" cols="50" rows="50"></textarea>
-																				<label class="form-label" for="emailMessage">Mensaje</label>
+																				<select class="form-select" aria-label="Default select example" name="selectNewCampaing" id="selectNewCampaing">
+																						<option selected></option>
+																						<option value="Black_friday">Black friday</option>
+																						<option value="Servicios_digitales">Servicos digitales</option>
+																						<option value="Redes_sociales">Contacto a través de nuestras redes sociales</option>
+																						<option value="Temporada_navideña">Temporada navideña</option>
+																				</select>
+																				<label for="priority" class="form-label">Tipos de campañas</label>
 																			</div>
 																			<div class="form-floating py-3">
-																				<input class="form-control form-control-sm mb-2" name="emailUser" type="email" id="emailUser" maxlength="20" readonly value="leidyjam1@hotmail.com">
-																				<label class="form-label" for="emailUser">Correo</label>
+																				<input class="form-control form-control-sm mb-2" name="emailUser" type="email" id="emailUser" maxlength="20" readonly value="{{customer.email}}">
+																				<label class="form-label" for="emailUser">Correo del cliente</label>
 																			</div>
-																			<button type="submit" class="btn btn-outline-danger" data-bs-target="#newCampaing{{ customer.id }}" data-bs-toggle="modal">Crear</button>
-
+																			<button type="submit" class="btn btn-outline-danger" data-bs-target="#newCampaing{{ customer.id }}" data-bs-toggle="modal">Crear campaña</button>
 																		</form> 
 																		</div>
 																		<div class="modal-footer">
