se agrego los graficos estadisticos de tasks y contacts en el dashboard

--- a/contacts/templates/contacts.html
+++ b/contacts/templates/contacts.html
@@ -234,6 +234,7 @@
 																						<option value="Servicios_digitales">Servicos digitales</option>
 																						<option value="Redes_sociales">Contacto a través de nuestras redes sociales</option>
 																						<option value="Temporada_navideña">Temporada navideña</option>
+																						<option value="Nuevo_cliente">Nuevo cliente</option>
 																				</select>
 																				<label for="priority" class="form-label">Tipos de campañas</label>
 																			</div>
@@ -241,7 +242,7 @@
 																				<input class="form-control form-control-sm mb-2" name="emailUser" type="email" id="emailUser" maxlength="20" readonly value="{{customer.email}}">
 																				<label class="form-label" for="emailUser">Correo del cliente</label>
 																			</div>
-																			<button type="submit" class="btn btn-outline-danger" data-bs-target="#newCampaing{{ customer.id }}" data-bs-toggle="modal">Crear campaña</button>
+																			<button type="submit" class="btn btn-outline-success" data-bs-target="#newCampaing{{ customer.id }}" data-bs-toggle="modal">Crear campaña</button>
 																		</form> 
 																		</div>
 																		<div class="modal-footer">
