--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
 							<li class="nav-item">
 								<a class="nav-link text-decoration-none" href="{% url 'about' %}">Sobre nosotros</a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link text-decoration-none" href="{% url 'contact_us' %}">Contáctanos</a>
+							</li>
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle text-decoration-none" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 									<i class="far fa-user"></i>
